<?xml version="1.0"?>
<package format="3">
  <name>septentrio_gnss_driver</name>
  <version>0.1.0</version>
  <description>ROSaic: C++ driver for Septentrio's mosaic receivers and beyond</description>
  <author>Tibor Dome</author>
  <maintainer email="githubuser@septentrio.com">Septentrio</maintainer>
  <license>BSD 3-Clause License</license>
  <url type="website">https://github.com/septentrio-gnss/septentrio_gnss_driver</url>
  <url type="website">https://www.ros.org/wiki/septentrio_gnss_driver</url>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  <depend>thread</depend>
  <depend>boost</depend>
  <depend>diagnostic_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>gps_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>tf2</depend>
  <depend>diagnostic_updater</depend>
  <depend>septentrio_gnss_driver_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
